@@ -161,6 +161,7 @@
 	define('SYSMAP_ELEMENT_TYPE_MAP',	1);
 	define('SYSMAP_ELEMENT_TYPE_TRIGGER',	2);
 	define('SYSMAP_ELEMENT_TYPE_HOST_GROUP',3);
+	define('SYSMAP_ELEMENT_TYPE_IMAGE',	4);
 
 	define('SYSMAP_ELEMENT_ICON_ON',	0);
 	define('SYSMAP_ELEMENT_ICON_OFF',	1);
