@@ -1,5 +1,6 @@
 Changes for 1.6.2
 
+ - [DEV-263] added support of a new map element - simple image (Alexei)
  - [DEV-260] support of macro TRIGGER.NSEVERITY (Alexei)
  - [DEV-255] added support of #num for function last() (Sasha)
  - [ZBX-593] fixed stop escalations if action is disabled (Sasha)
